# GroupOfAgents

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  QUICKSTART.md  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
backend/: server.js
config/: .env.example  default.json
docs/: README.md
examples/: simple_workflow.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: AgentForm.jsx  AgentManager.jsx  WorkflowCanvas.jsx  WorkflowForm.jsx  WorkflowManager.jsx
src/group_of_agents/: __init__.py
src/group_of_agents/agents/: __init__.py  base.py
src/group_of_agents/mcp/: __init__.py  client.py
src/group_of_agents/utils/: __init__.py
src/group_of_agents/workflows/: __init__.py  base.py
tests/: conftest.py
tests/agents/: test_base.py
tests/utils/: test_utils.py
tests/workflows/: test_base.py
